Fix social section alignment in mobile view

--- a/styles/ContactCode.module.css
+++ b/styles/ContactCode.module.css
@@ -61,19 +61,33 @@
     color: var(--accent-color);
 }
 
+.property {
+    padding-left: 3.5rem;
+}
+
+.indent {
+    display: inline-block;
+}
+
 @media screen and (max-width: 600px) {
     .code {
         font-size: 0.85rem;
         line-height: 1.5rem;
-        padding: 1.25rem 1rem;
+        padding: 1.25rem 0.5rem 1.25rem 0.75rem;
     }
 
     .line {
-        padding-left: 2rem;
+        padding-left: 2.25rem;
+        line-height: 1.5rem;
     }
 
     .line::before {
+        width: 1.75rem;
         font-size: 0.85rem;
         line-height: 1.5rem;
+    }
+
+    .property {
+        padding-left: 3rem;
     }
 }
